yamls/flowmanager/fm_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-container-svc
  labels:
    app: django-container
spec:
  ports:
  - name: "28000"
    port: 28000
    targetPort: 28000
  selector:
    app: django-container
  type: NodePort
