yamls/flowmanager/fm_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: django-container-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: django-container-svc
          servicePort: 28000
